--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -10,5 +10,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "dlffekviq",
+    "ApiKey": "285343642794714",
+    "ApiSecret": "MmYrbChG0hWcrmt7i3R05tuyXn4"
+  }
 }
